# deepg

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
deepsnake/cfg/: default.py
deepsnake/lib/: games.py  model.py
deepsnake/scripts/: play.py  train.py
