[tool.poetry]
name = "deepsnake"
version = "0.1.0"
description = ""
authors = ["Mostafa Eissa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
